Add shopping cart link and implement product JSON data

--- a/html/carrito.html
+++ b/html/carrito.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Productos - Essence & Co.</title>
-    <link rel="icon" href="../img/favicon.ico" type="image/x-icon" />
+    <title>Carrito de Compras</title>
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
@@ -26,24 +25,7 @@
         </li>
       </ul>
     </nav>
-    <main>
-      <section class="products-intro">
-        <h2>Descubrí Nuestros Productos</h2>
-        <p>Explorá nuestra amplia selección de perfumes premium y fragancias exclusivas.</p>
-      </section>
-      <section class="products-flex" id="products-container">
-        <div id="product-modal" class="modal">
-          <div class="modal-content">
-            <span class="modal-close">&times;</span>
-            <h2 id="modal-title"></h2>
-            <img id="modal-image" src="" alt="" />
-            <p id="modal-description"></p>
-            <p id="modal-price"></p>
-            <button class="btn-comprar">Comprar</button>
-          </div>
-        </div>
-      </section>
-    </main>
+
     <footer>
       <p>&copy; 2024 Essence & Co. Todos los derechos reservados.</p>
     </footer>
