--- a/html/contacto.html
+++ b/html/contacto.html
@@ -21,6 +21,9 @@
         <li><a href="ofertas.html">Ofertas</a></li>
         <li><a href="resenias.html">Reseñas</a></li>
         <li><a href="contacto.html">Contacto</a></li>
+        <li>
+          <a href="carrito.html"><img id="carrito-img" src="../img/carrito.png" alt="carrito" /></a>
+        </li>
       </ul>
     </nav>
     <main>
