--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <li><a href="html/ofertas.html">Ofertas</a></li>
         <li><a href="html/resenias.html">Reseñas</a></li>
         <li><a href="html/contacto.html">Contacto</a></li>
+        <li>
+          <a href="html/carrito.html"><img id="carrito-img" src="img/carrito.png" alt="carrito" /></a>
+        </li>
       </ul>
     </nav>
     <main>
