Enhance shopping cart functionality and improve product display

--- a/html/carrito.html
+++ b/html/carrito.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Carrito de Compras</title>
+    <title>Carrito de Compras - Essence & Co.</title>
+    <link rel="icon" href="../img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
@@ -25,6 +26,18 @@
         </li>
       </ul>
     </nav>
+
+    <main>
+      <section id="carrito-contenedor">
+        <h2>Tu Carrito de Compras</h2>
+        <div id="productos-carrito"></div>
+        <div id="carrito-total">
+          <p id="total"></p>
+          <button id="vaciar-carrito">Vaciar carrito</button>
+          <button id="finalizar-compra">Finalizar compra</button>
+        </div>
+      </section>
+    </main>
 
     <footer>
       <p>&copy; 2024 Essence & Co. Todos los derechos reservados.</p>
