--- a/html/productos.html
+++ b/html/productos.html
@@ -39,7 +39,7 @@
             <img id="modal-image" src="" alt="" />
             <p id="modal-description"></p>
             <p id="modal-price"></p>
-            <button class="btn-comprar">Comprar</button>
+            <button class="btn-comprar" id="btn-comprar-modal">Comprar</button>
           </div>
         </div>
       </section>
