Add offers functionality with dynamic loading and update cart management

--- a/html/carrito.html
+++ b/html/carrito.html
@@ -43,5 +43,6 @@
       <p>&copy; 2024 Essence & Co. Todos los derechos reservados.</p>
     </footer>
     <script src="../js/scripts.js"></script>
+    <script src="../js/carrito.js"></script>
   </body>
 </html>
