--- a/html/productos.html
+++ b/html/productos.html
@@ -48,5 +48,6 @@
       <p>&copy; 2024 Essence & Co. Todos los derechos reservados.</p>
     </footer>
     <script src="../js/scripts.js"></script>
+    <script src="../js/productos.js"></script>
   </body>
 </html>
