Add modal for successful purchase and enhance cart functionality

--- a/html/carrito.html
+++ b/html/carrito.html
@@ -37,6 +37,14 @@
           <button id="finalizar-compra">Finalizar compra</button>
         </div>
       </section>
+      <div id="modal-compra-exitosa" class="modal">
+        <div class="modal-content">
+          <span class="modal-close" id="modal-close">×</span>
+          <h2>Compra Exitosa</h2>
+          <p>¡Gracias por tu compra! Los datos de envío se enviarán a tu correo electrónico.</p>
+          <button id="btn-cerrar-modal">Cerrar</button>
+        </div>
+      </div>
     </main>
 
     <footer>
