Add modal for product addition confirmation in cart

--- a/html/productos.html
+++ b/html/productos.html
@@ -43,6 +43,15 @@
           </div>
         </div>
       </section>
+      <div id="modal-agregado" class="modal">
+        <div class="modal-content">
+          <span id="modal-close" class="modal-close">&times;</span>
+          <h2>¡Producto añadido al carrito!</h2>
+          <p>El producto ha sido añadido a tu carrito. Puedes seguir comprando o proceder al carrito.</p>
+          <button id="modal-continue">Seguir comprando</button>
+          <button id="modal-view-cart">Ver carrito</button>
+        </div>
+      </div>
     </main>
     <footer>
       <p>&copy; 2024 Essence & Co. Todos los derechos reservados.</p>
